<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.main.MainFragment">

    <Button
        android:id="@+id/bestellen_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bestellen"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

    <Button
        android:id="@+id/betalen_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/betalen"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/bestellen_btn"
        app:layout_constraintEnd_toStartOf="@+id/bestellen_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/drinken_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drinken"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview"
        app:layout_constraintEnd_toStartOf="@+id/Make_pizza_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/pizza_menu_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pizza_Menu"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/Make_pizza_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Make_pizza_btn"
        app:layout_constraintTop_toTopOf="@+id/Make_pizza_btn" />

    <Button
        android:id="@+id/Make_pizza_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maak_je_eigen_pizza"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/drinken_btn"
        app:layout_constraintEnd_toStartOf="@+id/pizza_menu_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/drinken_btn"
        app:layout_constraintTop_toTopOf="@+id/drinken_btn" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bestellen_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/table_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Make_pizza_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/_90_00"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/pizza_menu_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>